experiment/parse.output
Grammar

    0 $accept: a $end

    1 a: b c

    2 b: B

    3 c: c C
    4  | C


Terminals, with rules where they appear

$end (0) 0
error (256)
B (258) 2
C (259) 3 4


Nonterminals, with rules where they appear

$accept (5)
    on left: 0
a (6)
    on left: 1, on right: 0
b (7)
    on left: 2, on right: 1
c (8)
    on left: 3 4, on right: 1 3


state 0

    0 $accept: . a $end

    B  shift, and go to state 1

    a  go to state 2
    b  go to state 3


state 1

    2 b: B .

    $default  reduce using rule 2 (b)


state 2

    0 $accept: a . $end

    $end  shift, and go to state 4


state 3

    1 a: b . c

    C  shift, and go to state 5

    c  go to state 6


state 4

    0 $accept: a $end .

    $default  accept


state 5

    4 c: C .

    $default  reduce using rule 4 (c)


state 6

    1 a: b c .
    3 c: c . C

    C  shift, and go to state 7

    $default  reduce using rule 1 (a)


state 7

    3 c: c C .

    $default  reduce using rule 3 (c)
